solved overlapping issue

--- a/todo.css
+++ b/todo.css
@@ -51,20 +51,21 @@ h1{
 } 
 
 #list{
-	position: relative;
 	list-style: none;
 	width: 55%;
+	min-height: 100vh;
 	padding: 0;
     margin: auto;
 }
 
 li {
-	/* position: absolute; */
+	/*position: fixed;*/
 	margin-top: 10px;
 	border-bottom: 1px solid white;
+	padding: 7px, 0, 7px, 0;
 	color: white;
 	width: 100%;
-	height: 4vh;
+	max-height: 20vh;
     transition: 1s;
     animation-name: fadeIn;
     animation-duration: 3s;
@@ -103,30 +104,8 @@ li:hover{
 	height: 2.5vh;
 	position: relative;
 }
-.nestedList{
-	display: inline;
-	position: relative;
-	float: right;
-	list-style: none;
-	width: 90%;
-	padding: 0;
-    /*margin-left: ;*/
-}
 
 .subInput {
-	float: left;
 	margin-top: 5px;
-	width: 90%;
-	height: 4vh;
 	padding: 0px 5px 0px 5px;
-}
-.addSubList {
-	margin-top: 5px;
-	float: right;
-	text-align: center;
-	padding: 7px;
-	background-color: royalblue;
-	width: 7%;
-	height: 4vh;
-	float: left;
 }
